--- a/oscps-gui/package.json
+++ b/oscps-gui/package.json
@@ -34,5 +34,8 @@
   "type": "module",
   "dependencies": {
     "@tauri-apps/api": "^1.5.6"
-  }
+  },
+  "trustedDependencies": [
+    "svelte-preprocess"
+  ]
 }
