--- a/.github/workflows/rust-tests.yml
+++ b/.github/workflows/rust-tests.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Install system dependencies
+        run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev
+
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -36,7 +39,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-registry-
 
-      - name: Install dependencies
+      - name: Install Rust dependencies
         run: cargo fetch
 
       - name: Run tests
