--- a/.github/workflows/rust-tests.yml
+++ b/.github/workflows/rust-tests.yml
@@ -21,7 +21,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev
+        run: sudo apt-get update && sudo apt-get install -y \
+              libgtk-3-dev \
+              libsoup2.4-dev \
+              libglib2.0-dev \
+              libxml2-dev
+
+      - name: Set environment variables
+        run: |
+          export PKG_CONFIG_PATH="/usr/lib/x86_64-linux-gnu/pkgconfig"
 
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
@@ -40,10 +48,7 @@ jobs:
             ${{ runner.os }}-cargo-registry-
 
       - name: Install Rust dependencies
-        run: cargo fetch
-
-      - name: Ensure soup2-sys v0.2.0 is installed
-        run: cargo install soup2-sys --version 0.2.0
+        run: cargo build --release
 
       - name: Run tests
         run: cargo test --all
