--- a/oscps-gui/src-tauri/Cargo.toml
+++ b/oscps-gui/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.6.5", features = [] }
 oscps-lib = { path = "../../oscps-lib" }
+soup2-sys = "=0.2.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
