--- a/.github/workflows/rust-tests.yml
+++ b/.github/workflows/rust-tests.yml
@@ -21,15 +21,18 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y \
-              libgtk-3-dev \
-              libsoup2.4-dev \
-              libglib2.0-dev \
-              libxml2-dev
-
-      - name: Set environment variables
         run: |
-          export PKG_CONFIG_PATH="/usr/lib/x86_64-linux-gnu/pkgconfig"
+          sudo apt-get update
+          sudo apt-get install -y \
+            libwebkit2gtk-4.0-dev \
+            build-essential \
+            curl \
+            wget \
+            file \
+            libssl-dev \
+            libgtk-3-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev
 
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
