--- a/oscps-lib/Cargo.toml
+++ b/oscps-lib/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 uom  = "0.36.0"
 once_cell = "1.17.1"
 pubchem = "0.1.1"
+reqwest = { version = "0.11", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
