--- a/oscps-lib/Cargo.toml
+++ b/oscps-lib/Cargo.toml
@@ -11,3 +11,4 @@ reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
+anyhow = "1.0"
