updating github workflow to check on PRs

--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -5,6 +5,12 @@ on:
     branches:
       - main
       - develop
+  pull_request:
+    branches:
+      - main
+      - develop
+  release:
+    types: [published]
 
 jobs:
   check-docs:
