updating check-docs github workflow

--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: ${{ matrix.rust }}
+          toolchain: stable
           override: true
 
       - name: Install Clippy
