updating check-docs github workflow

--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -36,6 +36,20 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-target-
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libwebkit2gtk-4.0-dev \
+            build-essential \
+            curl \
+            wget \
+            file \
+            libssl-dev \
+            libgtk-3-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev
+
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
         with:
