copied bezier example from iced repo. Will modify.

--- a/oscps-gui/Cargo.toml
+++ b/oscps-gui/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "oscps-gui"
 version = "0.1.0"
+authors = ["Nathaniel Thomas <nathaniel@swbell.net>", "Bhargav Akula <bhargavakula01>"]
 edition = "2021"
 
 [dependencies]
-iced = "0.13.1"
+iced = {version = "0.13.1", features = ["canvas", "debug"]}
