--- a/oscps-gui/Cargo.toml
+++ b/oscps-gui/Cargo.toml
@@ -5,4 +5,6 @@ authors = ["Nathaniel Thomas <nathaniel@swbell.net>", "Bhargav Akula <bhargavaku
 edition = "2021"
 
 [dependencies]
+env_logger = "0.11.6"
 iced = {version = "0.13.1", features = ["canvas", "debug", "lazy"]}
+log = "0.4"
