updating the github workflows so that workflow is initiated when PRs are opened

--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -5,10 +5,8 @@ on:
     branches:
       - main
       - develop
-  push:
-    branches:
-      - main
-      - develop
+  release:
+    types: [published]
 
 jobs:
   lint:
