--- a/oscps-gui/Cargo.toml
+++ b/oscps-gui/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 env_logger = "0.11.6"
 iced = {version = "0.13.1", features = ["canvas", "debug", "lazy"]}
 log = "0.4"
+oscps-lib = { path = "../oscps-lib" }
