--- a/oscps-db/Cargo.toml
+++ b/oscps-db/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "oscps-db"
 version = "0.1.0"
-edition = "2021"
+authors = ["Nathaniel Thomas <nathaniel@swbell.net>", "Bhargav Akula <mail.bhargavakula@gmail.com>"]
+edition = "2025"
 
 [dependencies]
