--- a/oscps-gui/Cargo.toml
+++ b/oscps-gui/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "oscps-gui"
 version = "0.1.0"
-authors = ["Nathaniel Thomas <nathaniel@swbell.net>", "Bhargav Akula <bhargavakula01>"]
-edition = "2021"
+authors = ["Nathaniel Thomas <nathaniel@swbell.net>", "Bhargav Akula <mail.bhargavakula@gmail.com>"]
+edition = "2024"
 
 [dependencies]
 env_logger = "0.11.6"
