--- a/oscps-lib/Cargo.toml
+++ b/oscps-lib/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "oscps-lib"
 version = "0.1.0"
-edition = "2021"
+authors = ["Nathaniel Thomas <nathaniel@swbell.net>", "Bhargav Akula <mail.bhargavakula@gmail.com>"]
+edition = "2024"
 
 [dependencies]
 uom  = "0.36.0"
