--- a/oscps-lib/Cargo.toml
+++ b/oscps-lib/Cargo.toml
@@ -11,4 +11,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 anyhow = "1.0"
+autodiff = "0.7.0"
 oscps-db = { path = "../oscps-db" }
