made minor changes

--- a/oscps-lib/Cargo.toml
+++ b/oscps-lib/Cargo.toml
@@ -2,6 +2,7 @@
 name = "oscps-lib"
 version = "0.1.0"
 authors = ["Nathaniel Thomas <nathaniel@swbell.net>", "Bhargav Akula <mail.bhargavakula@gmail.com>"]
+edition = "2021"
 
 [dependencies]
 uom  = "0.37.0"
