minor updates to branch
fixed 'edition' for cargo.toml files

--- a/oscps-db/Cargo.toml
+++ b/oscps-db/Cargo.toml
@@ -2,5 +2,6 @@
 name = "oscps-db"
 version = "0.1.0"
 authors = ["Nathaniel Thomas <nathaniel@swbell.net>", "Bhargav Akula <mail.bhargavakula@gmail.com>"]
+edition = "2021"
 
 [dependencies]
