--- a/oscps-gui/Cargo.toml
+++ b/oscps-gui/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 
 [dependencies]
 env_logger = "0.11.6"
-iced = {version = "0.13.1", features = ["canvas", "debug", "lazy"]}
+iced = { version = "0.13.1", features = ["advanced", "canvas", "debug", "lazy"] }
 log = "0.4"
 oscps-lib = { path = "../oscps-lib" }
+strum = "0.27.1"
+strum_macros = "0.27.1"
